versioned_docs/version-5.2/client-api/operations/patching/content/_single-document-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* The **Patch** operation is used to perform *partial* document updates with **one trip to the server**, 
  instead of loading, modifying, and saving a full document. 
  The whole operation is executed on the server-side and is useful as a performance enhancement or for 
  updating denormalized data in entities.

* Since the operation is executed in a single request to the database,  
  the patch command is performed in a single write [transaction](../../../../client-api/faq/transaction-support.mdx).  

* The current page covers patch operations on single documents.

* Patching has three possible interfaces: [Typed Session API](../../../../client-api/operations/patching/single-document.mdx#typed-session-api), 
[Non-Typed Session API](../../../../client-api/operations/patching/single-document.mdx#non-typed-session-api), 
and [Operations API](../../../../client-api/operations/patching/single-document.mdx#operations-api).

* Patching can be done from the [client API](../../../../client-api/operations/patching/single-document.mdx#examples) as well as in the [studio](../../../../studio/database/documents/patch-view.mdx).  

In this page:  

* [API overview](../../../../client-api/operations/patching/single-document.mdx#api-overview)  
  * [Typed Session API](../../../../client-api/operations/patching/single-document.mdx#typed-session-api)
  * [Non-Typed Session API](../../../../client-api/operations/patching/single-document.mdx#non-typed-session-api)
  * [Operations API](../../../../client-api/operations/patching/single-document.mdx#operations-api)
  * [List of Script Methods](../../../../client-api/operations/patching/single-document.mdx#list-of-script-methods)
* [Examples](../../../../client-api/operations/patching/single-document.mdx#examples)  
  * [Change Field's Value](../../../../client-api/operations/patching/single-document.mdx#change-fields-value)  
  * [Change Values of Two Fields](../../../../client-api/operations/patching/single-document.mdx#change-values-of-two-fields)  
  * [Increment Value](../../../../client-api/operations/patching/single-document.mdx#increment-value)  
  * [Add or Increment](../../../../client-api/operations/patching/single-document.mdx#add-or-increment)  
  * [Add or Patch](../../../../client-api/operations/patching/single-document.mdx#add-or-patch)  
  * [Add or Patch to an Existing Array](../../../../client-api/operations/patching/single-document.mdx#add-or-patch-to-an-existing-array)  
  * [Add Item to Array](../../../../client-api/operations/patching/single-document.mdx#add-item-to-array)  
  * [Insert Item into Specific Position in Array](../../../../client-api/operations/patching/single-document.mdx#insert-item-into-specific-position-in-array)  
  * [Modify Item in Specific Position in Array](../../../../client-api/operations/patching/single-document.mdx#modify-item-in-specific-position-in-array)  
  * [Filter out Items from an Array](../../../../client-api/operations/patching/single-document.mdx#filter-out-items-from-an-array)  
  * [Loading Documents in a Script](../../../../client-api/operations/patching/single-document.mdx#loading-documents-in-a-script)  
  * [Remove Property](../../../../client-api/operations/patching/single-document.mdx#remove-property)  
  * [Rename Property](../../../../client-api/operations/patching/single-document.mdx#rename-property)  
  * [Add Document](../../../../client-api/operations/patching/single-document.mdx#add-document)  
  * [Clone Document](../../../../client-api/operations/patching/single-document.mdx#clone-document)  
  * [Increment Counter](../../../../client-api/operations/patching/single-document.mdx#increment-counter)  
  * [Delete Counter](../../../../client-api/operations/patching/single-document.mdx#delete-counter)  
  * [Get Counter](../../../../client-api/operations/patching/single-document.mdx#get-counter)  

</Admonition>

## API Overview

## Typed Session API

A type-safe session interface that allows performing the most common patch operations.  
The patch request will be sent to the server only after the call to `SaveChanges`. This way it's possible to perform multiple operations in one request to the server.  

<Admonition type="note" title="">

### Increment Field Value
`Session.Advanced.Increment`
<TabItem value="patch_generic_interface_increment" label="patch_generic_interface_increment">
<CodeBlock language="csharp">
{`void Increment<T, U>(T entity, Expression<Func<T, U>> fieldPath, U delta);

void Increment<T, U>(string id, Expression<Func<T, U>> fieldPath, U delta);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| ------------- | ------------- | ----- |
| **T** | `Type` | Entity type |
| **U** | `Type` | Field type, must be of numeric type or a `string` of `char` for string concatenation |
| **entity** | `T` | Entity on which the operation should be performed. The entity should be one that was returned by the current session in a `Load` or `Query` operation, this way, the session can track down the entity's ID |
| **entity id** | `string` | Entity ID on which the operation should be performed. |
| **fieldPath** | `Expression<Func<T, U>>` | Lambda describing the path to the field. |
| **delta** | `U` | Value to be added. |

* Note the numeric values [restrictions](../../../../server/kb/numbers-in-ravendb.mdx) in JavaScript
`Session.Advanced.AddOrIncrement`
<TabItem value="add_or_increment_generic" label="add_or_increment_generic">
<CodeBlock language="csharp">
{`void AddOrIncrement<T, TU>(string id, T entity, Expression<Func<T, TU>> path, TU valToAdd);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| ------------- | ------------- | ----- |
| **T** | `Type` | Entity type |
| **TU** | `Type` | Field type, must be of numeric type or a `string` of `char` for string concatenation |
| **entity** | `T` | Entity on which the operation should be performed. The entity should be one that was returned by the current session in a `Load` or `Query` operation, this way, the session can track down the entity's ID |
| **entity id** | `string` | Entity ID on which the operation should be performed. |
| **path** | `Expression<Func<T, TU>>` | Lambda describing the path to the field. |
| **valToAdd** | `U` | Value to be added. |

</Admonition>
<Admonition type="note" title="">


### Set Field Value
`Session.Advanced.Patch`
<TabItem value="patch_generic_interface_set_value" label="patch_generic_interface_set_value">
<CodeBlock language="csharp">
{`void Patch<T, U>(string id, Expression<Func<T, U>> fieldPath, U value);

void Patch<T, U>(T entity, Expression<Func<T, U>> fieldPath, U value);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| ------------- | ------------- | ----- |
| **T** | `Type` | Entity type |
| **U** | `Type` | Field type|
| **entity** | `T` | Entity on which the operation should be performed. The entity should be one that was returned by the current session in a `Load` or `Query` operation. This way the session can track down the entity's ID. |
| **entity id** | `string` | Entity ID on which the operation should be performed. |
| **fieldPath** | `Expression<Func<T, U>>` | Lambda describing the path to the field. |
| **delta** | `U` | Value to set. |
`Session.Advanced.AddOrPatch`

<TabItem value="add_or_patch_generic" label="add_or_patch_generic">
<CodeBlock language="csharp">
{`void AddOrPatch<T, TU>(string id, T entity, Expression<Func<T, TU>> path, TU value);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| ------------- | ------------- | ----- |
| **T** | `Type` | Entity type |
| **TU** | `Type` | Field type|
| **entity** | `T` | Entity on which the operation should be performed. The entity should be one that was returned by the current session in a `Load` or `Query` operation. This way the session can track down the entity's ID. |
| **entity id** | `string` | Entity ID on which the operation should be performed. |
| **fieldPath** | `Expression<Func<T, TU>>` | Lambda describing the path to the field. |
| **value** | `U` | Value to set. |

</Admonition>
<Admonition type="note" title="">


### Array Manipulation
`Session.Advanced.Patch`
<TabItem value="patch_generic_interface_array_modification_lambda" label="patch_generic_interface_array_modification_lambda">
<CodeBlock language="csharp">
{`void Patch<T, U>(T entity, Expression<Func<T, IEnumerable<U>>> fieldPath,
    Expression<Func<JavaScriptArray<U>, object>> arrayModificationLambda);

void Patch<T, U>(string id, Expression<Func<T, IEnumerable<U>>> fieldPath,
    Expression<Func<JavaScriptArray<U>, object>> arrayModificationLambda);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| ------------- | ------------- | ----- |
| **T** | `Type` | Entity type |
| **U** | `Type` | Field type|
| **entity** | `T` | Entity on which the operation should be performed. The entity should be one that was returned by the current session in a `Load` or `Query` operation. This way the session can track down the entity's ID. |
| **entity id** | `string` | Entity ID on which the operation should be performed. |
| **fieldPath** | `Expression<Func<T, U>>` | Lambda describing the path to the field. |
| **arrayMofificationLambda** | `Expression<Func<JavaScriptArray<U>, object>>` | Lambda that modifies the array, see `JavaScriptArray` below. |
`Session.Advanced.AddOrPatch`
<TabItem value="add_or_patch_array_generic" label="add_or_patch_array_generic">
<CodeBlock language="csharp">
{`void AddOrPatch<T, TU>(string id, T entity, Expression<Func<T, List<TU>>> path, 
    Expression<Func<JavaScriptArray<TU>, object>> arrayAdder);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| ------------- | ------------- | ----- |
| **T** | `Type` | Entity type |
| **TU** | `Type` | Field type|
| **entity** | `T` | Entity on which the operation should be performed. The entity should be one that was returned by the current session in a `Load` or `Query` operation. This way the session can track down the entity's ID. |
| **entity id** | `string` | Entity ID on which the operation should be performed. |
| **path** | `Expression<Func<T, TU>>` | Lambda describing the path to the field. |
| **Expression&lt;Func&lt;JavaScriptArray&gt;** | `Expression<Func<JavaScriptArray<TU>, object>>` | Lambda that modifies the array, see `JavaScriptArray` below. |
| **arrayAdder** | `Add()` | Values to add to array. |

<Admonition type="info" title="JavaScriptArray" id="javascriptarray" href="#javascriptarray">
`JavaScriptArray` allows building lambdas representing array manipulations for patches.  

| Method Signature| Return Type | Description |
|--------|:-----|-------------| 
| **Put(T item)** | `JavaScriptArray` | Allows adding `item` to an array. |
| **Put(params T[] items)** | `JavaScriptArray` | Items to be added to the array. |
| **RemoveAt(int index)** | `JavaScriptArray` | Removes item in position `index` in array. |
| **RemoveAll(Func&lt;T, bool&gt; predicate)** | `JavaScriptArray` | Removes all the items in the array that satisfy the given predicate. |

</Admonition>

</Admonition>



## Non-Typed Session API

The non-typed Session API for patches uses the `Session.Advanced.Defer` function which allows registering one or more commands.  
One of the possible commands is the `PatchCommandData`, describing single document patch command.  
The patch request will be sent to the server only after the call to `SaveChanges`, this way it's possible to perform multiple operations in one request to the server.  

`Session.Advanced.Defer`
<TabItem value="patch_non_generic_interface_in_session" label="patch_non_generic_interface_in_session">
<CodeBlock language="csharp">
{`void Defer(ICommandData[] commands);
`}
</CodeBlock>
</TabItem>

<Admonition type="info" title="PatchCommandData" id="patchcommanddata" href="#patchcommanddata">

| Constructor| Type | Description |
|--------|:-----|-------------|
| **id** | `string` | ID of the document to be patched. |
| **changeVector** | `string` | [Can be null] Change vector of the document to be patched, used to verify that the document was not changed before the patch reached it. |
| **patch** | `PatchRequest` | Patch request to be performed on the document. |
| **patchIfMissing** | `PatchRequest` | [Can be null] Patch request to be performed if no document with the given ID was found. |

</Admonition>

<Admonition type="info" title="PatchRequest" id="patchrequest" href="#patchrequest">

We highly recommend using scripts with parameters. This allows RavenDB to cache scripts and boost performance. 
Parameters can be accessed in the script through the `args` object and passed using PatchRequest's "Values" parameter.

| Members | Type | Description |
| ------------- | ------------- | ----- |
| **Script** | `string` | JavaScript code to be run. |
| **Values** | `Dictionary<string, object>` | Parameters to be passed to the script. The parameters can be accessed using the '$' prefix. Parameter starting with a '$' will be used as is, without further concatenation. |

</Admonition>



## Operations API

An operations interface that exposes the full functionality and allows performing ad-hoc patch operations without creating a session.  

`Raven.Client.Documents.Operations.Send`  
`Raven.Client.Documents.Operations.SendAsync`  

<TabItem value="patch_non_generic_interface_in_store" label="patch_non_generic_interface_in_store">
<CodeBlock language="csharp">
{`PatchStatus Send(PatchOperation operation);

Task<PatchStatus> SendAsync(PatchOperation operation, 
                            SessionInfo sessionInfo = null, 
                            CancellationToken token = default(CancellationToken));
`}
</CodeBlock>
</TabItem>

<Admonition type="info" title="PatchOperation" id="patchoperation" href="#patchoperation">

| Constructor| Type | Description |
|--------|:-----|-------------|
| **id** | `string` | ID of the document to be patched. |
| **changeVector** | `string` | [Can be null] Change vector of the document to be patched, used to verify that the document was not changed before the patch reached it. |
| **patch** | `PatchRequest` | Patch request to be performed on the document. |
| **patchIfMissing** | `PatchRequest` | [Can be null] Patch request to be performed if no document with the given ID was found. Will run only if no `changeVector` was passed. |
| **skipPatchIfChangeVectorMismatch** | `bool` | If false and `changeVector` has value, and document with that ID and change vector was not found, will throw an exception. |

</Admonition>



## List of Script Methods

This is a list of a few of the javascript methods that can be used in patch scripts. See the 
more comprehensive list at [Knowledge Base: JavaScript Engine](../../../../server/kb/javascript-engine.mdx#predefined-javascript-functions).  

| Method | Arguments | Description |
| - | - | - |
| **load** | `string` or `string[]` | Loads one or more documents into the context of the script by their document IDs |
| **loadPath** | A document and a path to an ID within that document | Loads a related document by the path to its ID |
| **del** | Document ID; change vector | Delete the given document by its ID. If you add the expected change vector and the document's current change vector does not match, the document will _not_ be deleted. |
| **put** | Document ID; document; change vector | Create or overwrite a document with a specified ID and entity. If you try to overwrite an existing document and pass the expected change vector, the put will fail if the specified change vector does not match the document's current change vector. |
| **cmpxchg** | Key | Load a compare exchange value into the context of the script using its key |
| **getMetadata** | Document | Returns the document's metadata |
| **id** | Document | Returns the document's ID |
| **lastModified** | Document | Returns the `DateTime` of the most recent modification made to the given document |
| **counter** | Document; counter name | Returns the value of the specified counter in the specified document |
| **counterRaw** | Document; counter name | Returns the specified counter in the specified document as a key-value pair |
| **incrementCounter** | Document; counter name | Increases the value of the counter by one |
| **deleteCounter** | Document; counter name | Deletes the counter |
| **spatial.distance** | Two points by latitude and longitude; spatial units | Find the distance between to points on the earth |
| **timeseries** | Document; the time series' name | Returns the specified time series object |



## Examples

### Change Field's Value

<Tabs groupId='languageSyntax'>
<TabItem value="Session-typed-syntax" label="Session-typed-syntax">
<CodeBlock language="csharp">
{`// change FirstName to Robert                
session.Advanced.Patch<Employee, string>(
    "employees/1",
    x => x.FirstName, "Robert");

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// change FirstName to Robert                
session.Advanced.Defer(new PatchCommandData(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.FirstName = args.FirstName;",
        Values =
        {
            {"FirstName", "Robert"}
        }
    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`// change FirstName to Robert                
store.Operations.Send(new PatchOperation(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.FirstName = args.FirstName;",
        Values =
        {
            {"FirstName", "Robert"}
        }
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Change Values of Two Fields

<Tabs groupId='languageSyntax'>
<TabItem value="Session-typed-syntax" label="Session-typed-syntax">
<CodeBlock language="csharp">
{`// change FirstName to Robert and LastName to Carter in single request
// note that in this case, we create single request, but two seperate batch operations
// in order to achieve atomicity, please use the non generic APIs
session.Advanced.Patch<Employee, string>("employees/1", x => x.FirstName, "Robert");
session.Advanced.Patch<Employee, string>("employees/1", x => x.LastName, "Carter");

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// change FirstName to Robert and LastName to Carter in single request
// note that here we do maintain the atomicity of the operation
session.Advanced.Defer(new PatchCommandData(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"
                this.FirstName = args.UserName.FirstName
                this.LastName = args.UserName.LastName",
        Values =
        {
            {
                "UserName", new
                {
                    FirstName = "Robert",
                    LastName = "Carter"
                }
            }
        }
    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`// change FirstName to Robert and LastName to Carter in single request
// note that here we do maintain the atomicity of the operation
store.Operations.Send(new PatchOperation(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"
                this.FirstName = args.UserName.FirstName
                this.LastName = args.UserName.LastName",
        Values =
        {
            {
                "UserName", new
                {
                    FirstName = "Robert",
                    LastName = "Carter"
                }
            }
        }
    }, patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Increment Value

<Tabs groupId='languageSyntax'>
<TabItem value="Session-typed-syntax" label="Session-typed-syntax">
<CodeBlock language="csharp">
{`// increment UnitsInStock property value by 10
session.Advanced.Increment<Product, int>("products/1-A", x => x.UnitsInStock, 10);

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`session.Advanced.Defer(new PatchCommandData(
    id: "products/1-A",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.UnitsInStock += args.UnitsToAdd",
        Values =
        {
            {"UnitsToAdd", 10}
        }
    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation(
    id: "products/1-A",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.UnitsInStock += args.UnitsToAdd",
        Values =
        {
            {"UnitsToAdd", 10}
        }
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Add or Increment

`AddOrIncrement` increments an existing field or adds a new one in documents where they didn't exist.

<TabItem value="Add_Or_Increment_Sample" label="Add_Or_Increment_Sample">
<CodeBlock language="csharp">
{`// While running AddOrIncrement specify <entity type, field type>
session.Advanced.AddOrIncrement<User, int>(

        // Specify document id and entity on which the operation should be performed.
        id,
        new User
        \{
            FirstName = "John",
            LastName = "Doe",
            LoginCount = 1

        // The path to the field and value to be added.
        \}, x => x.LoginCount, 1);

    session.SaveChanges();
`}
</CodeBlock>
</TabItem>
### Add or Patch

`AddOrPatch` adds or edits field(s) in a single document.  

If the document doesn't yet exist, this operation adds the document but doesn't patch it.  

<TabItem value="Add_Or_Patch_Sample" label="Add_Or_Patch_Sample">
<CodeBlock language="csharp">
{`// While running AddOrPatch specify <entity type, field type>
session.Advanced.AddOrPatch<User, DateTime>(

// Specify document id and entity on which the operation should be performed.
    id,
    new User
    \{
        FirstName = "John",
        LastName = "Doe",
        LastLogin = DateTime.Now
    \},
    // The path to the field and value to set.
    x => x.LastLogin, new DateTime(2021, 9, 12));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
### Add or Patch to an Existing Array

This sample shows how to patch an existing array or add it to documents where it doesn't yet exist.

<TabItem value="Add_Or_Patch_Array_Sample" label="Add_Or_Patch_Array_Sample">
<CodeBlock language="csharp">
{`// While running AddOrPatch specify <entity type, field type>
session.Advanced.AddOrPatch<User, DateTime>(

    // Specify document id and entity on which the operation should be performed.
    id,
    new User
    \{
        FirstName = "John",
        LastName = "Doe",
        LoginTimes =
        new List<DateTime>
        \{
                DateTime.UtcNow
        \}
    \},
    // The path to the field
    x => x.LoginTimes,
    // Modifies the array
    u => u.Add(new DateTime(1993, 09, 12), new DateTime(2000, 01, 01)));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
### Add Item to Array

<Tabs groupId='languageSyntax'>
<TabItem value="Session-typed-syntax" label="Session-typed-syntax">
<CodeBlock language="csharp">
{`// add a new comment to Comments
session.Advanced.Patch<BlogPost, BlogComment>("blogposts/1",
    x => x.Comments,
    comments => comments.Add(new BlogComment
    {
        Content = "Lore ipsum",
        Title = "Some title"
    }));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// add a new comment to Comments
session.Advanced.Defer(new PatchCommandData(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = "this.Comments.push(args.Comment)",
        Values =
        {
            {
                "Comment", new BlogComment
                {
                    Content = "Lore ipsum",
                    Title = "Some title"
                }
            }
        }

    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`// add a new comment to Comments
store.Operations.Send(new PatchOperation(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = "this.Comments.push(args.Comment)",
        Values =
        {
            {
                "Comment", new BlogComment
                {
                    Content = "Lore ipsum",
                    Title = "Some title"
                }
            }
        }

    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Insert Item into Specific Position in Array

Inserting item into specific position is supported only by the non-typed APIs
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// insert a new comment at position 1 to Comments
session.Advanced.Defer(new PatchCommandData(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = "this.Comments.splice(1, 0, args.Comment)",
        Values =
        {
            {
                "Comment", new BlogComment
                {
                    Content = "Lore ipsum",
                    Title = "Some title"
                }
            }
        }
    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = "this.Comments.splice(1, 0, args.Comment)",
        Values =
        {
            {
                "Comment", new BlogComment
                {
                    Content = "Lore ipsum",
                    Title = "Some title"
                }
            }
        }
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Modify Item in Specific Position in Array

Inserting item into specific position is supported only by the non-typed APIs
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// modify a comment at position 3 in Comments
session.Advanced.Defer(new PatchCommandData(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = "this.Comments.splice(3, 1, args.Comment)",
        Values =
        {
            {
                "Comment", new BlogComment
                {
                    Content = "Lore ipsum",
                    Title = "Some title"
                }
            }
        }
    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`// modify a comment at position 3 in Comments
store.Operations.Send(new PatchOperation(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = "this.Comments.splice(3, 1, args.Comment)",
        Values =
        {
            {
                "Comment", new BlogComment
                {
                    Content = "Lore ipsum",
                    Title = "Some title"
                }
            }
        }
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Filter out Items from an Array

<Tabs groupId='languageSyntax'>
<TabItem value="Session-typed-syntax" label="Session-typed-syntax">
<CodeBlock language="csharp">
{`// filter out all comments of a blogpost which contains the word "wrong" in their contents 
session.Advanced.Patch<BlogPost, BlogComment>("blogposts/1",
    x => x.Comments,
    comments => comments.RemoveAll(y => y.Content.Contains("wrong")));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// filter out all comments of a blogpost which contains the word "wrong" in their contents 
session.Advanced.Defer(new PatchCommandData(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.Comments = this.Comments.filter(comment=>
                comment.Content.includes(args.TitleToRemove));",
        Values =
        {
            {"TitleToRemove", "wrong"}
        }
    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`// filter out all comments of a blogpost which contains the word "wrong" in their contents
store.Operations.Send(new PatchOperation(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.Comments = this.Comments.filter(comment=>
                comment.Content.includes(args.TitleToRemove));",
        Values =
        {
            {"TitleToRemove", "wrong"}
        }
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Loading Documents in a Script

Loading documents supported only by non-typed APIs
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// update product names in order, according to loaded product documents
session.Advanced.Defer(new PatchCommandData(
    id: "orders/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.Lines.forEach(line=> { 
                var productDoc = load(line.Product);
                line.ProductName = productDoc.Name;
                });"
    }, patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`// update product names in order, according to loaded product documents
store.Operations.Send(new PatchOperation(
    id: "blogposts/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"this.Lines.forEach(line=> { 
                var productDoc = load(line.Product);
                line.ProductName = productDoc.Name;
                });"
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Remove Property

Removing property supported only by the non-typed APIs
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// remove property Age
session.Advanced.Defer(new PatchCommandData(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"delete this.Age"
    },
    patchIfMissing: null));
session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`// remove property Age
store.Operations.Send(new PatchOperation(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @"delete this.Age"
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Rename Property

Renaming property supported only by the non-typed APIs
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`// rename FirstName to First
session.Advanced.Defer(new PatchCommandData(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @" var firstName = this[args.Rename.Old];
                delete this[args.Rename.Old];
                this[args.Rename.New] = firstName",
        Values =
        {
            {
                "Rename", new
                {
                    Old = "FirstName",
                    New = "Name"
                }
            }
        }
    },
    patchIfMissing: null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation(
    id: "employees/1",
    changeVector: null,
    patch: new PatchRequest
    {
        Script = @" var firstName = this[args.Rename.Old];
                delete this[args.Rename.Old];
                this[args.Rename.New] = firstName",
        Values =
        {
            {
                "Rename", new
                {
                    Old = "FirstName",
                    New = "Name"
                }
            }
        }
    },
    patchIfMissing: null));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Add Document

Adding a new document is supported only by the non-typed APIs
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`session.Advanced.Defer(new PatchCommandData("employees/1-A", null,
    new PatchRequest
    {
        Script = "put('orders/', { Employee: id(this) });",
    }, null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation("employees/1-A", null, new PatchRequest
{
    Script = "put('orders/', { Employee: id(this) });",
}));
`}
</CodeBlock>
</TabItem>
</Tabs>
### Clone Document

In order to clone a document use put method as follows
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`session.Advanced.Defer(new PatchCommandData("employees/1-A", null,
    new PatchRequest
    {
        Script = "put('employees/', this);",
    }, null));

session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation("employees/1-A", null, new PatchRequest
{
    Script = "put('employees/', this);",
}));
`}
</CodeBlock>
</TabItem>
</Tabs>

<Admonition type="info" title="Cloning, Attachments & Counters" id="cloning-attachments-counters" href="#cloning-attachments-counters"> 
The attachments and/or counters from the source document will not be copied to the new one automatically.
</Admonition>
### Increment Counter

In order to increment or create a counter use &lt;code&gt;incrementCounter&lt;/code&gt; method as follows
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-typed" label="Session-syntax-typed">
<CodeBlock language="csharp">
{`var order = session.Load<Order>("orders/1-A");
session.CountersFor(order).Increment("Likes", 1);
session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`session.Advanced.Defer(new PatchCommandData("orders/1-A", null,
    new PatchRequest
    {
        Script = "incrementCounter(this.Company, args.name, args.val);",
        Values =
        {
            { "name", "Likes" },
            { "val", 20 }
        }
    }, null));
session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation("orders/1-A", null, new PatchRequest
{
    Script = "incrementCounter(this.Company, args.name, args.val);",
    Values =
    {
        { "name", "Likes" },
        { "val", -1 }
    }
}));
`}
</CodeBlock>
</TabItem>
</Tabs>

<Admonition type="info" title="Method Overloading & Value restrictions" id="method-overloading-value-restrictions" href="#method-overloading-value-restrictions">
The method can be called by document ID or by document reference and the value can be negative
</Admonition>
### Delete Counter

In order to delete a counter use &lt;code&gt;deleteCounter&lt;/code&gt; method as follows
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-typed" label="Session-syntax-typed">
<CodeBlock language="csharp">
{`session.CountersFor("orders/1-A").Delete("Likes");
session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`session.Advanced.Defer(new PatchCommandData("products/1-A", null,
    new PatchRequest
    {
        Script = "deleteCounter(this, args.name);",
        Values =
        {
            { "name", "Likes" },
        }
    }, null));
session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation("products/1-A", null, new PatchRequest
{
    Script = "deleteCounter(this, args.name);",
    Values =
    {
        { "name", "Likes" },
    }
}));
`}
</CodeBlock>
</TabItem>
</Tabs>

<Admonition type="info" title="Method Overloading" id="method-overloading" href="#method-overloading">
The method can be called by document ID or by document reference
</Admonition>
### Get Counter

In order to get a counter while patching use &lt;code&gt;counter&lt;/code&gt; method as follows
<Tabs groupId='languageSyntax'>
<TabItem value="Session-syntax-typed" label="Session-syntax-typed">
<CodeBlock language="csharp">
{`var order = session.Load<Order>("orders/1-A");
var counters = session.Advanced.GetCountersFor(order);
`}
</CodeBlock>
</TabItem>
<TabItem value="Session-syntax-untyped" label="Session-syntax-untyped">
<CodeBlock language="csharp">
{`session.Advanced.Defer(new PatchCommandData("orders/1-A", null,
    new PatchRequest
    {
        Script = @"var likes = counter(this.Company, args.name);
                   put('result/', {company: this.Company, likes: likes});",
        Values =
        {
            { "name", "Likes" },
        }
    }, null));
session.SaveChanges();
`}
</CodeBlock>
</TabItem>
<TabItem value="Operations-syntax" label="Operations-syntax">
<CodeBlock language="csharp">
{`store.Operations.Send(new PatchOperation("orders/1-A", null, new PatchRequest
{
    Script = @"var likes = counter(this.Company, args.name);
               put('result/', {company: this.Company, likes: likes});",
    Values =
    {
        { "name", "Likes" },
    }
}));
`}
</CodeBlock>
</TabItem>
</Tabs>

<Admonition type="info" title="Method Overloading" id="method-overloading" href="#method-overloading">
The method can be called by document ID or by document reference
</Admonition>




